[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = ["development-tools"]
description = "git via https."
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "git_httpsable"
repository = "https://github.com/packsaddle/rust-git_httpsable/"
version = "1.0.1"

[badges.appveyor]
project_name = "sanemat/rust-git-httpsable"
repository = "packsaddle/rust-git_httpsable"

[badges.travis-ci]
repository = "packsaddle/rust-git_httpsable"

[dependencies]
url = "1.5.1"
